# pyresourcehandler

./: .gitignore  README.md  pyproject.toml
src/: pyResourceHandler.py
src/ResourcesHandler/: ResourcesHandler.py
tests/: TestPyResourcesHandler.py  TestResourcesHandler.py
